euc-jp encoder added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="/code/boilerplate.js"></script>
 <script type="text/javascript" src="indexes.js"></script>
 <script type="text/javascript" src="conversion.js"></script>
+<script type="text/javascript" src="basics.js"></script>
 </head>
 
 <body class="app">
@@ -29,6 +30,7 @@
   </form>
   <p class="output">UTF8: <span id="u2utf8Result"></span></p>
   <p class="output">Big5: <span id="u2big5Result"></span></p>
+  <p class="output">EUC-JP: <span id="u2eucjpResult"></span></p>
   </div>
 
 
@@ -82,7 +84,7 @@
 </div>
 
 <div class="smallprint"><span id="version">First published  24 Jul 2013.  This version <span id="version-info"> 
-<!-- #BeginDate format:IS1m -->2015-12-03  12:03<!-- #EndDate --> 
+<!-- #BeginDate format:IS1m -->2015-12-03  22:28<!-- #EndDate --> 
   </span> GMT. &nbsp;&bull;&nbsp; Copyright <a href="mailto:r12a@w3.org">r12a@w3.org</a>. Licence <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">CC-By</a>.</span></div>
 </body>
 </html>
