eucjp decoder and iso 2022-jp encoder

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <p class="output">UTF8: <span id="u2utf8Result"></span></p>
   <p class="output">Big5: <span id="u2big5Result"></span></p>
   <p class="output">EUC-JP: <span id="u2eucjpResult"></span></p>
+  <p class="output">ISO 2022-JP:<br/><span id="u2iso2022jpResult"></span></p>
   </div>
 
 
@@ -44,8 +45,10 @@
     </p>
   </form>
   <p class="output">UTF8: <span id="utf82uResult"></span></p>
-  <p class="output">UTF8: <span id="myutf82uResult"></span></p>
   <p class="output">Big5: <span id="big52uResult"></span></p>
+  <p class="output">EUC-JP: <span id="eucjp2uResult"></span></p>
+
+  <p class="output">UTF8: <span id="myutf82uResult"></span></p>
   </div>
 </div>
 
@@ -84,7 +87,7 @@
 </div>
 
 <div class="smallprint"><span id="version">First published  24 Jul 2013.  This version <span id="version-info"> 
-<!-- #BeginDate format:IS1m -->2015-12-03  22:28<!-- #EndDate --> 
+<!-- #BeginDate format:IS1m -->2015-12-04  5:46<!-- #EndDate --> 
   </span> GMT. &nbsp;&bull;&nbsp; Copyright <a href="mailto:r12a@w3.org">r12a@w3.org</a>. Licence <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">CC-By</a>.</span></div>
 </body>
 </html>
