--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <p class="output">Big5: <span id="u2big5Result"></span></p>
   <p class="output">EUC-JP: <span id="u2eucjpResult"></span></p>
   <p class="output">ISO 2022-JP:<br/><span id="u2iso2022jpResult"></span></p>
+  <p class="output">Shift JIS:<br/><span id="u2sjisResult"></span></p>
   </div>
 
 
@@ -47,6 +48,8 @@
   <p class="output">UTF8: <span id="utf82uResult"></span></p>
   <p class="output">Big5: <span id="big52uResult"></span></p>
   <p class="output">EUC-JP: <span id="eucjp2uResult"></span></p>
+  <p class="output">ISO 2022-JP: <span id="iso2022jp2uResult"></span></p>
+  <p class="output">Shift JIS: <span id="sjis2uResult"></span></p>
 
   <p class="output">UTF8: <span id="myutf82uResult"></span></p>
   </div>
@@ -87,7 +90,7 @@
 </div>
 
 <div class="smallprint"><span id="version">First published  24 Jul 2013.  This version <span id="version-info"> 
-<!-- #BeginDate format:IS1m -->2015-12-04  5:46<!-- #EndDate --> 
+<!-- #BeginDate format:IS1m -->2015-12-04  10:49<!-- #EndDate --> 
   </span> GMT. &nbsp;&bull;&nbsp; Copyright <a href="mailto:r12a@w3.org">r12a@w3.org</a>. Licence <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">CC-By</a>.</span></div>
 </body>
 </html>
