--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </header>
 
 <div class="section" style="margin-left:7.5%;">
-
+<p class="note"><em>Note that the UTF-8 decoder is currently problematic.</em></p>
 <p id="loading">Loading index data... </p>
 <br style="clear:both;"/>
 
@@ -93,7 +93,7 @@
 </div>
 
 <div class="smallprint"><span id="version">First published  3 Dec 2015.  This version <span id="version-info"> 
-<!-- #BeginDate format:IS1m -->2015-12-04  15:41<!-- #EndDate --> 
+<!-- #BeginDate format:IS1m -->2015-12-04  16:34<!-- #EndDate --> 
   </span> GMT. &nbsp;&bull;&nbsp; Copyright <a href="mailto:r12a@w3.org">r12a@w3.org</a>. Licence <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">CC-By</a>.</span></div>
 </body>
 </html>
