format nit as kickstarter

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <button onclick="encode(document.getElementById('uChar').value); return false;" type="submit">Convert</button>
     </p>
   </form>
-  <p class="output" id="utf8enc">utf-8<span></span><span id="utf8encResult"></span></p>
+  <p class="output" id="utf8enc">utf-8<br/><span id="utf8encResult"></span></p>
   <p class="output" id="big5enc">big5<br/><span id="big5encResult"></span></p>
   <p class="output" id="eucjpenc">euc-jp<br/><span id="eucjpencResult"></span></p>
   <p class="output" id="iso2022jpenc">iso-2022-jp<br/><span id="iso2022jpencResult"></span></p>
@@ -256,7 +256,7 @@
 </div>
 
 <div class="smallprint"><span id="version">First published  3 Dec 2015.  This version <span id="version-info"> 
-<!-- #BeginDate format:IS1m -->2015-12-05  15:10<!-- #EndDate --> 
+<!-- #BeginDate format:IS1m -->2015-12-05  15:20<!-- #EndDate --> 
   </span> GMT. &nbsp;&bull;&nbsp; Copyright <a href="mailto:r12a@w3.org">r12a@w3.org</a>. Licence <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">CC-By</a>.</span></div>
 </body>
 </html>
